--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,4 +1,4 @@
  <h2>Groepen:</h2>
 <ul>
-<li *ngFor="let group of groups">{{group}}</li>
+<li *ngFor="let group of groups">{{group.name}}, {{group.groupID}}</li>
 </ul> 
