--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,24 +1,159 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
     <header class="jumbotron">
       <h3>
-        <strong>{{ currentUser.username }}</strong> Profile
+        Profiel van <strong>{{ currentUser.firstName }} {{currentUser.lastName}} </strong> 
       </h3>
     </header>
-    <p>
-      <strong>Token:</strong>
-      {{ currentUser.accessToken.substring(0, 20) }} ...
-      {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
-    </p>
+    <form
+        *ngIf="!isSuccessful"
+        name="form"
+        (ngSubmit)="f.form.valid && onSubmit()"
+        #f="ngForm"
+        novalidate
+      >
+    <div class="form-group">
+      <label for="firstName">Voornaam</label>
+      <input
+        type="text"
+        class="form-control"
+        name="firstName"
+        [(ngModel)]="form.firstName"
+        required
+        #firstName="ngModel"
+      />
+      <div class="alert-danger" *ngIf="firstName.errors && f.submitted">
+        <div *ngIf="firstName.errors.required">Voornaam is verplicht</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="lastName">Achternaam</label>
+      <input
+        type="text"
+        class="form-control"
+        name="lastName"
+        [(ngModel)]="form.lastName"
+        required
+        #lastName="ngModel"
+      />
+      <div class="alert-danger" *ngIf="lastName.errors && f.submitted">
+        <div *ngIf="lastName.errors.required">Achternaam is verplicht</div>
+      </div>
+    </div>
     <p>
       <strong>Email:</strong>
       {{ currentUser.email }}
     </p>
-    <strong>Roles:</strong>
-    <ul>
-      <li *ngFor="let role of currentUser.roles">
-        {{ role }}
-      </li>
-    </ul>
+
+    <div style="text-align:center">
+      <label class="hoverable" for="fileInput">
+      <div [innerHtml]='msg' *ngIf="msg" style="color: red;"></div>
+      <div><img [src]="url ? url : 'https://www.w3schools.com/howto/img_avatar.png'" height="300px"></div>
+      <div class="hover-text">Choose file</div>
+    </label>
+      <p>
+        <input id="fileInput" type="file" (change)="selectFile($event)">
+
+      </p>
+    </div>
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        class="form-control"
+        name="username"
+        [(ngModel)]="form.username"
+        required
+        minlength="3"
+        maxlength="20"
+        #username="ngModel"
+      />
+      <div class="alert-danger" *ngIf="username.errors && f.submitted">
+        <div *ngIf="username.errors.required">Username is required</div>
+        <div *ngIf="username.errors.minlength">
+          Username must be at least 3 characters
+        </div>
+        <div *ngIf="username.errors.maxlength">
+          Username must be at most 20 characters
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input
+        type="email"
+        class="form-control"
+        name="email"
+        [(ngModel)]="form.email"
+        required
+        email
+        #email="ngModel"
+      />
+      <div class="alert-danger" *ngIf="email.errors && f.submitted">
+        <div *ngIf="email.errors.required">Email is required</div>
+        <div *ngIf="email.errors.email">
+          Email must be a valid email address
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        name="password"
+        [(ngModel)]="form.password"
+        required
+        minlength="6"
+        #password="ngModel"
+      />
+      <div class="alert-danger" *ngIf="password.errors && f.submitted">
+        <div *ngIf="password.errors.required">Password is required</div>
+        <div *ngIf="password.errors.minlength">
+          Password must be at least 6 characters
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="fotoURL">Foto</label>
+      <input
+        type="text"
+        class="form-control"
+        name="fotoURL"
+        [(ngModel)]="form.fotoURL"
+        #lastName="ngModel"
+      />
+    </div>
+    <div class="form-group">
+      <label for="linkedInURL">LinkedIN URL</label>
+      <input
+        type="text"
+        class="form-control"
+        name="linkedInURL"
+        [(ngModel)]="form.linkedInURL"
+        #lastName="ngModel"
+      />
+    </div>
+    <div class="form-group">
+      <label for="functionCompany">Function within company</label>
+      <input
+        type="text"
+        class="form-control"
+        name="functionCompany"
+        [(ngModel)]="form.functionCompany"
+        #lastName="ngModel"
+      />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary btn-block">Update profiel</button>
+    </div>
+
+    <div class="alert alert-warning" *ngIf="f.submitted && isUpdateFailed">
+      Update failed!<br />{{ errorMessage }}
+    </div>
+  </form>
+  <div class="alert alert-success" *ngIf="isSuccessful">
+    De update is successful!
+  </div>
   </div>
   
   <ng-template #loggedOut>
