--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,6 +7,35 @@
         #f="ngForm"
         novalidate
       >
+      
+        <div class="form-group">
+          <label for="firstName">First Name</label>
+          <input
+            type="text"
+            class="form-control"
+            name="firstName"
+            [(ngModel)]="form.firstName"
+            required
+            #firstName="ngModel"
+          />
+          <div class="alert-danger" *ngIf="firstName.errors && f.submitted">
+            <div *ngIf="firstName.errors.required">First Name is required</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="lastName">Last Name</label>
+          <input
+            type="text"
+            class="form-control"
+            name="lastName"
+            [(ngModel)]="form.lastName"
+            required
+            #lastName="ngModel"
+          />
+          <div class="alert-danger" *ngIf="lastName.errors && f.submitted">
+            <div *ngIf="lastName.errors.required">Last Name is required</div>
+          </div>
+        </div>
         <div class="form-group">
           <label for="username">Username</label>
           <input
@@ -64,6 +93,36 @@
               Password must be at least 6 characters
             </div>
           </div>
+        </div>
+        <div class="form-group">
+          <label for="fotoURL">Foto</label>
+          <input
+            type="text"
+            class="form-control"
+            name="fotoURL"
+            [(ngModel)]="form.fotoURL"
+            #lastName="ngModel"
+          />
+        </div>
+        <div class="form-group">
+          <label for="linkedInURL">LinkedIN URL</label>
+          <input
+            type="text"
+            class="form-control"
+            name="linkedInURL"
+            [(ngModel)]="form.linkedInURL"
+            #lastName="ngModel"
+          />
+        </div>
+        <div class="form-group">
+          <label for="functionCompany">Function within company</label>
+          <input
+            type="text"
+            class="form-control"
+            name="functionCompany"
+            [(ngModel)]="form.functionCompany"
+            #lastName="ngModel"
+          />
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-block">Sign Up</button>
