bedrijf aangemaakt + nakijken of persoon manager is of niet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
 
 <div class="content" role="main">
-<app-groups></app-groups>
+<!--<app-groups></app-groups>-->
 
  </div> 
 
