--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
                 <a class="nav-link waves-light" mdbWavesEffect href="/Groups">Groepen</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link waves-light" mdbWavesEffect href="/Comapnies">Bedrijven</a>
+                <a class="nav-link waves-light" mdbWavesEffect href="/company">Bedrijven</a>
             </li>
 
             <!-- Dropdown -->
@@ -31,7 +31,7 @@
                     <a class="dropdown-item waves-light" mdbWavesEffect href="/profile">Gebruiker</a>
                     <a class="dropdown-item waves-light" mdbWavesEffect href="/Groups">Groepen</a>
                     <div class="divider dropdown-divider"></div>
-                    <a class="dropdown-item waves-light" mdbWavesEffect href="/Companies">Bedrijven</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect href="/company">Bedrijven</a>
                 </div>
             </li>
 
