--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -64,3 +64,17 @@
     </div>
   </div>
   </div>
+
+  
+  <div *ngIf="this.isChecked" class="text-center">
+    <br>
+    <br>
+    <div class="col-md-12">
+      <h2>{{this.nameCompany}}</h2>
+    </div>
+    <p>Omschrijving: {{this.description}}</p>
+    <p>Locatie: {{this.location}}</p>
+    <p>Manager: {{this.companyManager}}</p>
+    <a href="/company/{{this.companyID}}" class="button btn-block">Klik hier om dit bedrijf te wijzigen {{this.companyID}}</a>
+
+  </div>
