--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -22,6 +22,17 @@
             <div *ngIf="nameCompany.errors.required">Naam bedrijf is verplicht</div>
           </div>
         </div>
+        <div style="text-align:center">
+          <label class="hoverable" for="fileInput">
+          <div [innerHtml]='msg' *ngIf="msg" style="color: red;"></div>
+          <div><img [src]="this.fotoURL ? this.fotoURL : 'https://www.w3schools.com/howto/img_avatar.png'" height="300px"></div>
+          <div class="hover-text">Kies bestand</div>
+        </label>
+          <p>
+            <input id="fileInput" type="file" (change)="selectFile($event)">
+    
+          </p>
+        </div>
         <div class="form-group">
           <label for="location">Locatie</label>
           <input
