werknemer toevoegen aan bedrijf

--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -87,5 +87,5 @@
     <p>Locatie: {{this.location}}</p>
     <p>Manager: {{this.companyManager}}</p>
     <a href="/company/{{this.companyID}}" class="button btn-block">Klik hier om dit bedrijf te wijzigen {{this.companyID}}</a>
-
+    <a href="/company/userAdd/{{this.companyID}}" class="button btn-block">Klik hier om dit personen toe te voegen aan dit bedrijf</a>
   </div>
