--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
                 <a class="nav-link waves-light" mdbWavesEffect href="/profile">Gebruiker</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link waves-light" mdbWavesEffect href="/Groups">Groepen</a>
+                <a class="nav-link waves-light" mdbWavesEffect href="/group">Groepen</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link waves-light" mdbWavesEffect href="/company">Bedrijven</a>
@@ -29,7 +29,7 @@
                 <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect href="#">Home</a>
                     <a class="dropdown-item waves-light" mdbWavesEffect href="/profile">Gebruiker</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect href="/Groups">Groepen</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect href="/group">Groepen</a>
                     <div class="divider dropdown-divider"></div>
                     <a class="dropdown-item waves-light" mdbWavesEffect href="/company">Bedrijven</a>
                 </div>
