--- a/src/app/companies/company-user-add/company-user-add.component.html
+++ b/src/app/companies/company-user-add/company-user-add.component.html
@@ -65,6 +65,7 @@
                 <tr>
                     <th>Voornaam</th>
                     <th>Achternaam</th>
+                    <th>Foto</th>
                     <th>Email</th>
                     <th>Functie</th>
                 </tr>
@@ -72,6 +73,7 @@
         <tr *ngFor="let data of realData" (click)='onSelect(data["userID"])'>
             <td>{{data["firstName"]}}</td>
             <td>{{data["lastName"]}}</td>
+            <td><img [src]="data.fotoURL ? data.fotoURL : 'https://www.w3schools.com/howto/img_avatar.png'" height="100px"></td>
             <td>{{data["email"]}}</td>
             <td>{{data["functionCompany"]}}</td>
             <td><button >Voeg toe </button></td>
