--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -2,3 +2,4 @@
 <ul>
 <li *ngFor="let group of groups">{{group.nameGroup}}, {{group.groupID}}</li>
 </ul> 
+<app-group-add-post></app-group-add-post>
