oude posts worden opgehaald

--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -3,3 +3,4 @@
 <li *ngFor="let group of groups">{{group.nameGroup}}, {{group.groupID}}</li>
 </ul> 
 <app-group-add-post></app-group-add-post>
+<app-group-get-posts></app-group-get-posts>
