--- a/src/app/groups/group-get-posts/group-get-posts.component.html
+++ b/src/app/groups/group-get-posts/group-get-posts.component.html
@@ -12,7 +12,7 @@
           </thead>
           <tbody>
             <tr *ngFor="let data of this.echteData">
-              <td>{{data.content}}</td>
+              <td><a href="/group/add-reply/{{data.postID}}"> {{data.content}} </a></td>
               <td>{{data.subject}}</td>
               <td> <img [src]="data.fotoURL ? data.fotoURL : 'https://www.w3schools.com/howto/img_avatar.png'" height="100px">
               </td>
