--- a/src/app/groups/group-get-posts/group-get-posts.component.html
+++ b/src/app/groups/group-get-posts/group-get-posts.component.html
@@ -1,27 +1,33 @@
 <div class="text-center">
-      <div>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Onderwerp</th>
-              <th>Inhoud</th>
-              <th>Foto</th>
-              <th>Wijzig</th>
-              <th>Verwijder</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let data of this.echteData">
-              <td><a href="/group/add-reply/{{data.postID}}"> {{data.content}} </a></td>
-              <td>{{data.subject}}</td>
-              <td> <img [src]="data.fotoURL ? data.fotoURL : 'https://www.w3schools.com/howto/img_avatar.png'" height="100px">
-              </td>
-              <td *ngIf="this.isPostByUser">    <a href="/group/edit-post/{{data.postID}}" class="button btn-block">Wijzig {{data.postID}}</a>
-              </td>
-              <td *ngIf="this.isPostByUser"><button (click)="deletePost(data.postID)">  Verwijder {{data.postID}} </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+  <div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Onderwerp</th>
+          <th>Inhoud</th>
+          <th>Foto</th>
+          <th>Wijzig</th>
+          <th>Verwijder</th>
+          <th>Like/ Dislike</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let data of this.echteData">
+          <td><a href="/group/add-reply/{{data.postID}}"> {{data.content}} </a></td>
+          <td>{{data.subject}}</td>
+          <td> <img [src]="data.fotoURL ? data.fotoURL : 'https://www.w3schools.com/howto/img_avatar.png'" height="100px">
+          </td>
+          <td *ngIf="this.isPostByUser">    <a href="/group/edit-post/{{data.postID}}" class="button btn-block">Wijzig {{data.postID}}</a>
+          </td>
+          <td *ngIf="this.isPostByUser"><button (click)="deletePost(data.postID)">  Verwijder {{data.postID}} </button>
+          </td>
+          <td *ngIf="this.isPostByUser">
+            <button [disabled]="this.isGeliked? true : null" type="button" class="btn btn-sm btn-success"><i class="fas fa-thumbs-up" (click)="incrementLikes(data.postID, data)">{{data.aantalLikes}}</i></button>  
+            <button [disabled]="this.isDisliked? true : null" type="button" class="btn btn-sm btn-danger"><i class="fas fa-thumbs-down" (click)="incrementDislikes(data.postID, data)">{{data.aantalDislikes}}</i></button>  
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
