--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <!--Navbar-->
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
 
+    <!-- Navbar brand -->
+    <mdb-navbar-brand><a class="navbar-brand" href="#">&nbsp;</a></mdb-navbar-brand>
 
     <!-- Collapsible content -->
     <links>
